<resources>
    <string name="app_name">Droid Cafe</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="droid_deserts">Droid Desserts</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>

    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a froyo.</string>
    <string name="ordered_item">Ordered_Item</string>
    <string name="name_label_text">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="address_label_text">Address</string>
    <string name="enter_the_address">Enter the address</string>
    <string name="enter_the_phone_number">Enter the phone number</string>
    <string name="note">Note</string>
    <string name="phone">Phone</string>
    <string name="additional_note">Additional note</string>
    <string name="choose_a_delivery_method">Choose a delivery method:</string>
    <string name="pick_up">Pick up</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="same_day_messenger_service">Same day messenger service</string>

    <string name="action_contacts">Contacts</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favourites">Favourites</string>

    <string name="action_order_message">You selected Order.</string>
    <string name="action_contacts_message">You selected Contacts.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favourites_message">You selected Favourites.</string>
    <string name="action_settings">Settings</string>

    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>