<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.droidcafe.MainActivity">
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/action_contacts"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_order"
        android:orderInCategory="10"
        android:title="@string/action_order"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_shopping_cart" />

    <item
        android:id="@+id/action_status"
        android:orderInCategory="20"
        android:title="@string/action_status"
        app:showAsAction="always"
        android:icon="@drawable/ic_status_info"/>

    <item
        android:id="@+id/action_favourites"
        android:orderInCategory="30"
        android:title="@string/action_favourites"
        app:showAsAction="always"
        android:icon="@drawable/ic_favourites" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="50"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:icon="@drawable/ic_favourites" />
</menu>